--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -4,5 +4,13 @@
         "search": "Поиск"
     },
     "pending": "В ожидании",
-    "in-stock": "На складе"
+    "in-stock": "На складе",
+    "wallet": "Кошелёк",
+    "bonus": "Баллы",
+
+    "ref-panel":{
+        "bonus": "Получите бонус $20",
+        "desc": "Поделитесь ссылкой на приложение и получите бонус",
+        "btn": "Поделиться ссылкой"
+    }
 }
