--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -12,5 +12,18 @@
         "bonus": "Получите бонус $20",
         "desc": "Поделитесь ссылкой на приложение и получите бонус",
         "btn": "Поделиться ссылкой"
-    }
+    },
+
+    "news": "Новости",
+    "parcel": "Статус посылки",
+    "rating": "Рейтинг",
+    "new-branch": "Новый филиал",
+    "home-delivery": "Доставка домой",
+    "support": "Поддержка",
+
+    "on-the-way": "В пути",
+    "sorting": "Сортируется",
+    "in-delivery": "Доставляется",
+    "pick-up": "В пункте выдачи",
+    "accepted": "Принято"
 }
