--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -8,6 +8,11 @@
     "wallet": "Кошелёк",
     "bonus": "Баллы",
 
+    "personal-info": "Личная информация",
+    "your-branches": "Ваши филиалы",
+    "enter-info": "Введите свою личную информацию",
+    "enter-branches": "Введите свои филиалы",
+
     "ref-panel":{
         "bonus": "Получите бонус $20",
         "desc": "Поделитесь ссылкой на приложение и получите бонус",
