Fixed switch lang storage

--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -10,7 +10,7 @@
 
     "personal-info": "Личная информация",
     "your-branches": "Ваши филиалы",
-    "enter-info": "Введите свою личную информацию",
+    "enter-info": "Введите свои данные",
     "enter-branches": "Введите свои филиалы",
 
     "ref-panel":{
